--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -35,10 +35,10 @@
 
 .navbar-desktop-right {
 	float: right;
-	margin-right: 20vmin;
+	width: 12%;
 	justify-content: center;
 	align-items: center;
-	margin-top: 2.5vmin;
+	margin-top: 1.75vmin;
 }
 
 .navbar-desktop-left-brand {
@@ -63,19 +63,12 @@
 
 .navbar-desktop-link {
 	margin: 0.1vmin;
+	margin-top: 1.2vmin;
 	color: var(--primary-color-light);
 	background-color: white;
 	font-size: 2.25vmin;
-	transition: 0.3s;
 }
 
-.navbar-desktop-link:hover {
-	padding: 1vmin;
-	color: white;
-	border-radius: 50%;
-	background-color: var(--primary-color-light);
-	font-size: 1.75vmin;
-}
 
 .navbar-desktop-link-auth {
 	display: inline;
@@ -84,12 +77,12 @@
 
 .navbar-desktop-profile-picture-container {
 	display: inline-block;
-	padding-left: 4vmin;
-	margin-right: -10vmin;
 	font-size: 1.8vmin;
+	
 }
 
 .navbar-desktop-profile-picture {
+	margin-top: -1vmin;
 	width: 3vmin;
 	height: 3vmin;
 	border-radius: 50%;
