--- a/frontend/src/pages/Teamder/App.css
+++ b/frontend/src/pages/Teamder/App.css
@@ -1,6 +1,7 @@
 .react-tags__search-input {
 	width: 20vmin !important;
 	height: 5vmin !important;
+	margin-left: 6vmin;
 }
 
 .react-tags {
